# trader-engine

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  main.py  pyproject.toml
research/reports/: 01_polymarket_calibration.md  02_sports_edge.md  03_oos_validation.md  04_cross_category_efficiency.tex
scripts/: analyse_phase4.py  fetch_markets.py  fetch_phase4.py  fetch_sports.py  run_calibration.py  run_oos_validation.py  run_sports_analysis.py  run_stats.py
src/trader_engine/analysis/: __init__.py  calibration.py
src/trader_engine/ingestion/: __init__.py  polymarket.py  sports.py
src/trader_engine/schemas/: __init__.py  market.py
