[project]
name = "trader-engine"
version = "0.1.0"
description = "Prediction market calibration research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "matplotlib>=3.8",
    "scipy>=1.13",
    "numpy>=2.0",
    "pyarrow>=16.0",
    "pre-commit>=3.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trader_engine"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
